tests/syntax/bad/testfile-semicolon-2.scala

class A { var x = 1 def foo(){} }
object Main { def main(args: Array[String]) { } }
